[metadata]
name = domain-analyzer-pro
version = 2.3.0
author = BlueQuantum Security
author_email = contact@bluequantumdefense.com
description = Advanced domain analysis tool (DNS, WHOIS, SSL, OWASP, PDF)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/bluequantumsec/domain-analyzer
keywords = cybersecurity, whois, ssl, owasp, pdf, analysis, domains
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Internet :: Name Service (DNS)

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    beautifulsoup4
    tenacity

[options.entry_points]
console_scripts =
    domain-analyzer = domain_analyzer_pro.analyzer:main
